# sandbox

./: .coverage  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  README  README.rst  TEST.md  pyproject.toml  requirements.txt  sandbox.py  sbi.py  setup.py  test-requirements.txt  test.py
.github/workflows/: test.yml
mis_builder/: __manifest__.py
mis_builder/models/: mis_report.py
mis_builder/report/: mis_report_instance_xlsx.py  mis_report_instance_xlsx.xml
myaddon/: __manifest__.py
odoo_module/: __manifest__.py
public/: index.html
sandbox/: __init__.py
setup/_metapackage/: setup.py
setup/odoo_module/odoo/addons/: odoo_module
setuptools-scm-subdir/: setup.py
subdir/: pyproject.toml  sbitest.py
